# ocr-studio

./: .env.example  .gitignore  Makefile  README.md  ocr_extract.html  ocr_studio.html  pyproject.toml  run.py  test_vlm_bbox.py
.github/workflows/: release.yml
app/: config.py  main.py
app/routers/: documents.py  translate.py
app/services/: pdf_service.py  vlm_service.py
app/templates/: index.html
deploy/: deploy.sh
scripts/: build_exe.py
src/: config.py  constants.py  main.py  models.py
src/services/: image_service.py  openai_service.py  pdf_service.py  screen_capture.py
src/ui/: capture_overlay.py  capture_result_widget.py  home_page.py  main_window.py  setup_page.py  styles.py  system_tray.py
src/ui/tabs/: batch_tab.py  capture_tab.py  documents_tab.py  settings_tab.py
src/ui/widgets/: drop_zone.py  page_thumbnail_list.py  page_viewer.py  spinner.py  text_panel.py
src/utils/: hotkey.py  single_instance.py
src/workers/: batch_worker.py  ocr_worker.py  translate_worker.py
